force-app/main/default/objects/Survey_Instance__c/Survey_Instance__c.object-meta.xml
<CustomObject>
    <label>Survey Instance</label>
    <nameField>
        <displayFormat>SI-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Instances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>