force-app/main/default/objects/Survey_Instance__c/fields/Available_Until__c.field-meta.xml
<CustomField>
    <fullName>Available_Until__c</fullName>
    <label>Available Until</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>