force-app/main/default/objects/Survey_Instance__c/fields/Number_of_Answers__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Answers__c</fullName>
    <label>Number of Answers</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>